# ijgis_ca_carving

./: CMakeLists.txt  README.md
cmake_extras/: CMakeLists.txt  test_gdal.cpp  test_gdal_data.dbf  test_gdal_data.shp  test_gdal_data.shx
src/: CMakeLists.txt  tags
src/carving/: CMakeLists.txt  CarvingAlgorithm.h  CarvingAlgorithm_impl.h  CarvingEngine.h  CarvingEngineCPU.h  Culvert.h  InsertCulvertAlgorithm.cpp  InsertCulvertAlgorithm.h  LinkedCells.h  carving_help_CPU.h
src/flow_accumulation/: CMakeLists.txt  FlowAccumulationAlgorithm.h
src/flowrouting/: CMakeLists.txt  FlowRoutingAlgorithm.h  FlowRoutingAlgorithmCPU.h  FlowRoutingCommon.h
src/framework/: AbstractAlgorithm.cpp  AbstractAlgorithm.h  Area.cpp  Area.h  CMakeLists.txt  CellGrid.h  CellGridFrame.cpp  CellGridFrame.h  RasterArea.cpp  RasterArea.h  ReferenceSystem.cpp  ReferenceSystem.h  Short2.cpp  Short2.h  coordinates.cpp  coordinates.h  directions.cpp  directions.h  errors.cpp  errors.h  geo.cpp  geo.h  global_parameters.cpp  global_parameters.h
src/framework/io/: CMakeLists.txt  DataSource.cpp  DataSource.h  GDALRasterCollectionDataSource.cpp  GDALRasterCollectionDataSource.h  GDALRasterDataSource.cpp  GDALRasterDataSource.h  GDALRasterPrinter.cpp  GDALRasterPrinter.h  GDAL_dataset_ptr.cpp  GDAL_dataset_ptr.h  GDAL_help.cpp  GDAL_help.h  RasterDataSource.cpp  RasterDataSource.h  data_source_types.cpp  data_source_types.h  import_data.cpp  import_data.h  write_to_file.cpp  write_to_file.h
src/framework/program_options/: BaseCmdOpts.cpp  BaseCmdOpts.h  CMakeLists.txt  CmdError.cpp  CmdError.h
src/program_carving/: CMakeLists.txt  ProgramCmdOpts.cpp  ProgramCmdOpts.h  defs.h  insert_culverts_to_expensive_carvings.cpp  insert_culverts_to_expensive_carvings.h  insert_culverts_to_road_stream_intersections.cpp  insert_culverts_to_road_stream_intersections.h  main.cpp  program.cpp  program.h
src/utils/: CMakeLists.txt  Timer.cpp  Timer.h  TimerTree.cpp  TimerTree.h  geometrics.h  logging.cpp  logging.h  system_utils.cpp  system_utils.h  vectorize.h
